// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-doCyfw hiZwth"
>
  <input
    className="sc-jbOfQH eugwNE"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-dYtREw cGKBnK"
  >
    <span
      className="sc-jVZirl dQzwly"
    >
      <div
        checked={false}
        className="sc-deiPdS fOrRUa"
      />
    </span>
    <p
      className="sc-hBYLEG xqRHZ"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-doCyfw hiZwth"
>
  <input
    checked={true}
    className="sc-jbOfQH eugwNE"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-dYtREw cGKBnK"
  >
    <span
      className="sc-jVZirl dQzwly"
    >
      <div
        checked={true}
        className="sc-deiPdS kxhHeP"
      />
    </span>
    <p
      className="sc-hBYLEG xqRHZ"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-doCyfw hiZwth"
>
  <input
    className="sc-jbOfQH eugwNE"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-dYtREw cGKBnK"
  >
    <span
      className="sc-jVZirl dQzwly"
    >
      <div
        checked={false}
        className="sc-deiPdS fOrRUa"
      />
    </span>
    <p
      className="sc-hBYLEG xqRHZ"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-doCyfw hiZwth"
>
  <input
    className="sc-jbOfQH eugwNE"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-dYtREw cGKBnK"
  >
    <span
      className="sc-jVZirl dQzwly"
    >
      <div
        checked={false}
        className="sc-deiPdS fOrRUa"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-doCyfw hiZwth"
>
  <input
    className="sc-jbOfQH eugwNE"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-dYtREw cGKBnK"
  >
    <p
      className="sc-hBYLEG xqRHZ"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-jVZirl dQzwly"
    >
      <div
        checked={false}
        className="sc-deiPdS fOrRUa"
      />
    </span>
  </div>
</label>
`;
